# aft

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  biome.json  package.json  tsconfig.json
.alfonso/release-notes/: v0.20.0.md  v0.20.1.md  v0.21.0.md  v0.22.0.md  v0.22.1.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.25.1.md  v0.25.2.md  v0.26.0.md  v0.26.1.md
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
.opencode/: aft.jsonc
crates/aft/: Cargo.toml
crates/aft/src/: ast_grep_lang.rs  backup.rs  callgraph.rs  calls.rs  checkpoint.rs  config.rs  context.rs  edit.rs  error.rs  format.rs  fuzzy_match.rs  imports.rs  indent.rs  language.rs  lib.rs  log_ctx.rs  lsp_hints.rs  main.rs  parser.rs  protocol.rs  search_index.rs  semantic_index.rs  symbol_cache_disk.rs  symbols.rs  windows_shell.rs
crates/aft/src/bash_background/: buffer.rs  mod.rs  persistence.rs  process.rs  registry.rs  watchdog.rs
crates/aft/src/bash_permissions/: arity.rs  mod.rs  scan.rs
crates/aft/src/bash_rewrite/: dispatch.rs  footer.rs  mod.rs  parser.rs  rules.rs
crates/aft/src/commands/: add_decorator.rs  add_derive.rs  add_import.rs  add_member.rs  add_struct_tags.rs  ast_replace.rs  ast_scope.rs  ast_search.rs  bash.rs  bash_drain_completions.rs  bash_kill.rs  bash_status.rs  batch.rs  callers.rs  checkpoint.rs  configure.rs  conflicts.rs  delete_file.rs  edit_history.rs  edit_match.rs  edit_symbol.rs  extract_function.rs  glob.rs  grep.rs  impact.rs  inline_symbol.rs  list_checkpoints.rs  list_filters.rs  lsp_diagnostics.rs  lsp_find_references.rs  lsp_goto_definition.rs  lsp_hover.rs  lsp_inspect.rs  lsp_prepare_rename.rs  lsp_rename.rs  mod.rs  move_file.rs  move_symbol.rs  organize_imports.rs  outline.rs  (+14 more)
crates/aft/src/compress/: biome.rs  builtin_filters.rs  bun.rs  cargo.rs  eslint.rs  generic.rs  git.rs  mod.rs  npm.rs  pnpm.rs  pytest.rs  toml_filter.rs  trust.rs  tsc.rs  vitest.rs
crates/aft/src/compress/builtin_filters/: ansible-playbook.toml  df.toml  docker.toml  du.toml  find.toml  gh.toml  gradle.toml  helm.toml  kubectl.toml  ls.toml  make.toml  terraform.toml  tree.toml  wc.toml  xcodebuild.toml
crates/aft/src/lsp/: child_registry.rs  client.rs  diagnostics.rs  document.rs  jsonrpc.rs  manager.rs  mod.rs  position.rs  registry.rs  roots.rs  transport.rs
crates/aft/tests/: lsp_registry_test.rs  lsp_transport_test.rs  semantic_disk_test.rs  semantic_refresh_test.rs  semantic_test.rs  semantic_validation_test.rs
crates/aft/tests/fixtures/: ambiguous.ts
crates/aft/tests/helpers/: mod.rs
crates/aft/tests/integration/: ast_commands_test.rs  bash_background_persistence_test.rs  bash_background_test.rs  bash_compress_extras_test.rs  bash_compress_test.rs  bash_drain_completions_test.rs  bash_permissions_test.rs  bash_rewrite_test.rs  bash_test.rs  callgraph_test.rs  commands_test.rs  compress_cli_commands_test.rs  compress_filters_test.rs  configure_test.rs  edit_append_test.rs  edit_match_test.rs  edit_test.rs  format_test.rs  grep_glob_test.rs  helpers.rs  honest_failures_test.rs  import_test.rs  inline_symbol_test.rs  log_ctx_test.rs  lsp_commands_test.rs  lsp_diagnostics_test.rs  lsp_document_test.rs  lsp_inspect_test.rs  lsp_manager_test.rs  lsp_rename_test.rs  main.rs  markdown_test.rs  move_file_test.rs  move_symbol_test.rs  outline_languages_test.rs  outline_zoom_test.rs  parser_test.rs  security_test.rs  semantic_disk_test.rs  semantic_test.rs  (+2 more)
crates/aft/tests/integration/fixtures/compress_filters/ansible-playbook/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/df/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/docker/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/du/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/find/: expected.txt
crates/aft/tests/integration/fixtures/compress_filters/gh/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/gradle/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/helm/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/kubectl/: expected.txt
crates/aft/tests/integration/fixtures/compress_filters/ls/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/terraform/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/tree/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/wc/: expected.txt  input.txt
crates/aft/tests/integration/fixtures/compress_filters/xcodebuild/: expected.txt  input.txt
crates/aft/tests/lsp/: fake_server.rs
opencode-plugin-aft/: package.json  tsconfig.json
scripts/: install-claude-hooks.sh  release.sh  uninstall-claude-hooks.sh  validate-packages.mjs  version-sync.mjs  wait-release.sh
src/: callgraph.rs  calls.rs  context.rs  edit.rs  lib.rs  main.rs  protocol.rs
(+129 files in other folders)
