[package]
name = "agent-file-tools"
version = "0.8.1"
edition = "2021"
description = "Agent File Tools — tree-sitter powered code analysis for AI agents"
license = "MIT"
repository = "https://github.com/cortexkit/aft"
keywords = ["tree-sitter", "code-analysis", "ai-agent", "ast"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[lib]
name = "aft"
path = "src/lib.rs"

[[bin]]
name = "aft"
path = "src/main.rs"

[[bin]]
name = "fake-lsp-server"
path = "tests/lsp/fake_server.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
crossbeam-channel = "0.5"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-md = "0.5"
similar = "2"
ast-grep-core = "0.41"
streaming-iterator = "0.1"
ignore = "0.4"
notify = "8"
regex = "1"
regex-syntax = "0.8"
globset = "0.4"
sha2 = "0.10"

glob = "0.3"
which = "7"
url = "2"
content_inspector = "0.2.4"

[dev-dependencies]
tempfile = "3"
